--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -59,17 +59,17 @@
         android:id="@+id/EditEmailLogin"
         android:layout_width="300dp"
         android:layout_height="50dp"
+        android:layout_gravity="center"
         android:layout_marginHorizontal="40dp"
         android:layout_marginStart="35dp"
         android:layout_marginTop="119dp"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="281dp"
-        android:layout_gravity="center"
         android:background="@drawable/container_edit_text_all"
         android:drawableLeft="@drawable/email"
 
 
-        android:hint="Email:"
+        android:hint="email do responsável"
         android:inputType="text"
         android:maxLines="1"
         android:padding="15dp"
@@ -114,13 +114,15 @@
         android:textColor="#fff"
         android:textSize="14sp"
         android:textStyle="bold"
+
+
         app:layout_constraintBottom_toTopOf="@+id/editCadastro"
         app:layout_constraintEnd_toEndOf="@+id/containerlogin"
         app:layout_constraintStart_toStartOf="@+id/containerlogin"
         app:layout_constraintTop_toBottomOf="@+id/EditEmailLogin" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/RedefinirSenha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="88dp"
