--- a/app/src/main/res/layout/activity_fase2.xml
+++ b/app/src/main/res/layout/activity_fase2.xml
@@ -1,21 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/grindLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:alignmentMode="alignMargins"
+    android:columnCount="3"
+    android:columnOrderPreserved="false"
     android:background="@drawable/background"
-    tools:context="Activity.fase2">
+    android:padding="16dp"
+    android:rowCount="4"
+    android:useDefaultMargins="true">
 
-    <TextView
-        android:layout_width="181dp"
-        android:layout_height="190dp"
-        android:text="FUNCIONOU"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.665"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.606"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imageView29"
+        android:layout_width="108dp"
+        android:layout_height="150dp"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <ImageView
+        android:id="@+id/imageView28"
+        android:layout_width="108dp"
+        android:layout_height="150dp"
+        android:layout_row="3"
+        android:layout_column="0"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <ImageView
+        android:id="@+id/imageView27"
+        android:layout_width="108dp"
+        android:layout_height="150dp"
+        android:layout_row="3"
+        android:layout_column="2"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <ImageView
+        android:id="@+id/imageView26"
+        android:layout_width="108dp"
+        android:layout_height="150dp"
+        android:layout_row="2"
+        android:layout_column="0"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <ImageView
+        android:id="@+id/imageView25"
+        android:layout_width="108dp"
+        android:layout_height="150dp"
+        android:layout_row="2"
+        android:layout_column="2"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <ImageView
+        android:id="@+id/imageView24"
+        android:layout_width="108dp"
+        android:layout_height="150dp"
+        android:layout_row="1"
+        android:layout_column="2"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <ImageView
+        android:id="@+id/imageView23"
+        android:layout_width="108dp"
+        android:layout_height="150dp"
+        android:layout_row="1"
+        android:layout_column="0"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="108dp"
+        android:layout_height="150dp"
+        android:layout_row="0"
+        android:layout_column="2"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+
+    <!-- Repeat this ImageView for each card -->
+
+</GridLayout>
