--- a/app/src/main/res/layout/activity_fase3.xml
+++ b/app/src/main/res/layout/activity_fase3.xml
@@ -1,12 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/gridLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:alignmentMode="alignMargins"
+    android:columnCount="3"
+    android:rowCount="5"
     android:background="@drawable/background"
-    tools:context="Activity.fase3">
+    android:padding="16dp"
+    android:useDefaultMargins="true">
 
+    <!-- Primeira linha -->
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="85dp"
+        android:layout_height="111dp"
+        android:layout_row="0"
+        android:layout_column="0"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="85dp"
+        android:layout_height="111dp"
+        android:layout_row="0"
+        android:layout_column="2"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Segunda linha -->
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="85dp"
+        android:layout_height="111dp"
+        android:layout_row="1"
+        android:layout_column="0"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="85dp"
+        android:layout_height="111dp"
+        android:layout_row="1"
+        android:layout_column="2"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <!-- Terceira linha -->
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="85dp"
+        android:layout_height="111dp"
+        android:layout_row="2"
+        android:layout_column="0"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="85dp"
+        android:layout_height="111dp"
+        android:layout_row="2"
+        android:layout_column="2"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <!-- Quarta linha -->
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="85dp"
+        android:layout_height="111dp"
+        android:layout_row="3"
+        android:layout_column="0"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="85dp"
+        android:layout_height="111dp"
+        android:layout_row="3"
+        android:layout_column="2"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <!-- Quinta linha -->
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="85dp"
+        android:layout_height="111dp"
+        android:layout_row="4"
+        android:layout_column="0"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+    <ImageView
+        android:id="@+id/imageView10"
+        android:layout_width="85dp"
+        android:layout_height="111dp"
+        android:layout_row="4"
+        android:layout_column="2"
+        android:scaleType="fitCenter"
+        android:src="@drawable/card_back" />
+
+</GridLayout>
