--- a/app/src/main/res/layout/cadastro_main.xml
+++ b/app/src/main/res/layout/cadastro_main.xml
@@ -19,36 +19,38 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
+        app:layout_constraintVertical_bias="0.497" />
 
     <TextView
         android:id="@+id/textcadastro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cadastro"
-        android:textSize="25sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toTopOf="@id/containerlogin"
-        app:layout_constraintStart_toStartOf="@id/containerlogin"
+        android:layout_marginBottom="496dp"
+        android:text="Cadastro"
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
         app:layout_constraintEnd_toEndOf="@id/containerlogin"
-        />
+        app:layout_constraintStart_toStartOf="@id/containerlogin"
+        app:layout_constraintTop_toTopOf="@id/containerlogin" />
 
     <TextView
         android:id="@+id/textdesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="insira seus dados"
-        android:textSize="14sp"
-        android:textColor="@color/white"
-        android:textStyle="bold"
         android:layout_marginTop="13dp"
-        app:layout_constraintTop_toBottomOf="@id/textcadastro"
-        app:layout_constraintStart_toStartOf="@id/containerlogin"
+        android:layout_marginBottom="464dp"
+        android:text="insira seus dados"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
         app:layout_constraintEnd_toEndOf="@id/containerlogin"
 
-        />
+        app:layout_constraintStart_toStartOf="@id/containerlogin"
+        app:layout_constraintTop_toBottomOf="@id/textcadastro" />
 
     <EditText
         android:id="@+id/EditEmailLogin"
@@ -56,18 +58,19 @@
         android:layout_height="50dp"
         android:layout_marginHorizontal="40dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="393dp"
         android:background="@drawable/container_edit_text_all"
         android:drawableLeft="@drawable/person_header"
         android:hint="Nome da criança"
         android:inputType="text"
         android:maxLines="1"
         android:padding="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
         app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+
+
         app:layout_constraintStart_toStartOf="@+id/containerlogin"
-        app:layout_constraintTop_toBottomOf="@id/textdesc"
-
-
-        />
+        app:layout_constraintTop_toBottomOf="@id/textdesc" />
 
     <EditText
         android:id="@+id/EditTextEmail"
@@ -81,9 +84,14 @@
         android:inputType="text"
         android:maxLines="1"
         android:padding="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
         app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintHorizontal_bias="0.492"
+
         app:layout_constraintStart_toStartOf="@+id/containerlogin"
-        app:layout_constraintTop_toBottomOf="@id/EditEmailLogin" />
+        app:layout_constraintTop_toBottomOf="@id/EditEmailLogin"
+        app:layout_constraintVertical_bias="0.032" />
+
 
     <EditText
         android:id="@+id/EditLoginSenha"
@@ -98,118 +106,95 @@
         android:inputType="number"
         android:maxLines="1"
         android:padding="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
         app:layout_constraintEnd_toEndOf="@+id/containerlogin"
-        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="@+id/containerlogin"
-        app:layout_constraintTop_toBottomOf="@id/EditTextEmail" />
+        app:layout_constraintTop_toBottomOf="@id/EditTextEmail"
+        app:layout_constraintVertical_bias="0.056" />
 
     <EditText
         android:id="@+id/EditTextTel"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:hint="Senha:"
-        android:drawableLeft="@drawable/lock"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginVertical="10dp"
         android:background="@drawable/container_edit_text_all"
-        android:padding="15dp"
+        android:drawableLeft="@drawable/lock"
+        android:hint="Senha:"
         android:inputType="numberPassword"
         android:maxLines="1"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="40dp"
-        app:layout_constraintTop_toBottomOf="@id/EditLoginSenha"
-        app:layout_constraintStart_toStartOf="@+id/containerlogin"
+        android:padding="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
         app:layout_constraintEnd_toEndOf="@+id/containerlogin"
-        />
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin"
+        app:layout_constraintTop_toBottomOf="@id/EditLoginSenha"
+        app:layout_constraintVertical_bias="0.053" />
 
     <EditText
         android:id="@+id/EditTextTConfSenha"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:hint="Confirmar Senha:"
-        android:drawableLeft="@drawable/lock"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginVertical="10dp"
         android:background="@drawable/container_edit_text_all"
-        android:padding="15dp"
+        android:drawableLeft="@drawable/lock"
+        android:hint="Confirmar Senha:"
         android:inputType="numberPassword"
         android:maxLines="1"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="40dp"
-        app:layout_constraintTop_toBottomOf="@id/EditTextTel"
-        app:layout_constraintStart_toStartOf="@+id/containerlogin"
+        android:padding="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
         app:layout_constraintEnd_toEndOf="@+id/containerlogin"
-        />
-
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin"
+        app:layout_constraintTop_toBottomOf="@id/EditTextTel"
+        app:layout_constraintVertical_bias="0.049" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/BotaoLogin"
         style="@style/Button1"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginTop="124dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="12dp"
         android:onClick="validarcampos"
         android:text="Cadastrar!"
         app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
-        app:layout_constraintEnd_toEndOf="@id/containerlogin"
-        app:layout_constraintStart_toStartOf="@id/containerlogin"
-        app:layout_constraintTop_toBottomOf="@id/EditTextTel" />
-
-    <com.google.android.material.chip.Chip
-        android:id="@+id/chipTermoDeUso"
-        android:layout_width="190dp"
-        android:layout_height="20dp"
-        android:hint="Concorda com nossos termos de"
-        android:textColor="@color/black"
-        android:textSize="10dp"
-        tools:layout_editor_absoluteX="90dp"
-        tools:layout_editor_absoluteY="489dp" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="20dp"
-        android:text="@string/uso"
-        android:textSize="11dp"
-        android:textColor="#0800FF"
-        tools:layout_editor_absoluteX="270dp"
-        tools:layout_editor_absoluteY="491dp" />
-
-    <Switch
-        android:id="@+id/switch1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Efeito Sonoros"
-        android:gravity="center"
-        tools:layout_editor_absoluteX="124dp"
-        tools:layout_editor_absoluteY="462dp" />
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin"
+        app:layout_constraintTop_toBottomOf="@+id/EditTextTConfSenha"
+        app:layout_constraintVertical_bias="0.135" />
 
     <TextView
         android:id="@+id/editEsqueceuSenha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginStart="90dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="181dp"
-        android:layout_marginBottom="30dp"
 
+
+        android:layout_marginStart="48dp"
 
         android:text="Já realizou o cadastro antes?"
-        android:textColor="#E3E1E2"
+        android:textColor="@color/black"
         android:textSize="14sp"
+
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@id/BotaoLogin"
+        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
         app:layout_constraintStart_toStartOf="@+id/containerlogin"
-        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/BotaoLogin"
+        app:layout_constraintVertical_bias="0.481" />
 
     <TextView
-        android:id="@+id/RedefinirSenha"
+        android:id="@+id/VoltarLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="232dp"
-        android:layout_marginTop="4dp"
-        android:text="@string/EsqSenha"
+        android:text="@string/VoltarLog"
         android:textColor="#0800FF"
-        app:layout_constraintStart_toStartOf="@+id/containerlogin"
-        app:layout_constraintTop_toBottomOf="@id/BotaoLogin" />
+        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintHorizontal_bias="0.019"
+        app:layout_constraintStart_toEndOf="@+id/editEsqueceuSenha"
+        app:layout_constraintTop_toBottomOf="@+id/BotaoLogin"
+        app:layout_constraintVertical_bias="0.481" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
