--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -29,7 +29,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="396dp"
         android:text="Login"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
@@ -45,7 +45,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="357dp"
         android:text="insira suas informações"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
@@ -69,7 +69,7 @@
         android:drawableLeft="@drawable/email"
 
 
-        android:hint="email do responsável"
+        android:hint="Email do responsável"
         android:inputType="text"
         android:maxLines="1"
         android:padding="15dp"
@@ -99,41 +99,6 @@
         app:layout_constraintTop_toBottomOf="@id/EditEmailLogin"
         app:layout_constraintVertical_bias="0.0" />
 
-    <TextView
-        android:id="@+id/editEsqueceuSenha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="181dp"
-
-        android:layout_marginBottom="16dp"
-
-        android:text="Esqueceu sua senha?"
-        android:textColor="#fff"
-        android:textSize="14sp"
-        android:textStyle="bold"
-
-
-        app:layout_constraintBottom_toTopOf="@+id/editCadastro"
-        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
-        app:layout_constraintStart_toStartOf="@+id/containerlogin"
-        app:layout_constraintTop_toBottomOf="@+id/EditEmailLogin" />
-
-    <TextView
-        android:id="@+id/RedefinirSenha"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="88dp"
-        android:text="@string/EsqSenha"
-        android:textColor="#0800FF"
-        app:layout_constraintBottom_toTopOf="@+id/BotaoLogin"
-        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintStart_toEndOf="@+id/editEsqueceuSenha"
-        app:layout_constraintTop_toBottomOf="@+id/EditLoginSenha"
-        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/BTcadastrar"
@@ -144,10 +109,10 @@
         android:textColor="#0800FF"
         app:layout_constraintBottom_toTopOf="@+id/BotaoLogin"
         app:layout_constraintEnd_toEndOf="@+id/containerlogin"
-        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintHorizontal_bias="0.075"
         app:layout_constraintStart_toEndOf="@+id/editCadastro"
         app:layout_constraintTop_toBottomOf="@+id/EditLoginSenha"
-        app:layout_constraintVertical_bias="0.985" />
+        app:layout_constraintVertical_bias="0.892" />
 
     <TextView
         android:id="@+id/editCadastro"
@@ -155,32 +120,30 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
 
-        android:layout_marginStart="54dp"
-        android:layout_marginTop="104dp"
-        android:layout_marginEnd="164dp"
-        android:layout_marginBottom="158dp"
+        android:clickable="true"
+        android:focusable="true"
         android:text="Ainda não fez cadastro?"
-        android:textColor="#fff"
+        android:textColor="@color/black"
+
         android:textSize="14sp"
         android:textStyle="bold"
 
-        android:clickable="true"
-        android:focusable="true"
-
-        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
+        app:layout_constraintBottom_toTopOf="@+id/BotaoLogin"
         app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintHorizontal_bias="0.29"
         app:layout_constraintStart_toStartOf="@+id/containerlogin"
-        app:layout_constraintTop_toBottomOf="@+id/EditEmailLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/EditLoginSenha"
+        app:layout_constraintVertical_bias="0.212" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/BotaoLogin"
         style="@style/Button1"
         android:layout_width="250dp"
         android:layout_height="50dp"
+        android:layout_gravity="center"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="61dp"
         android:layout_marginBottom="44dp"
-        android:layout_gravity="center"
         android:onClick="validarcampos"
         android:padding="10dp"
         android:text="Entrar!"
@@ -189,7 +152,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/containerlogin"
         app:layout_constraintTop_toBottomOf="@+id/EditLoginSenha"
-        app:layout_constraintVertical_bias="0.917" />
+        app:layout_constraintVertical_bias="0.675" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
