--- a/app/src/main/res/drawable/buttonemerg2.xml
+++ b/app/src/main/res/drawable/buttonemerg2.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:type="linear"
-        android:startColor="#FFCB5D"
-        android:centerColor="#FBB144"
-        android:endColor="#FFCB5D"
+        android:startColor="@color/holo_blue_dark"
+        android:centerColor="@color/holo_blue_dark"
+        android:endColor="@color/holo_blue_dark"
         android:angle="45"
         />
     <corners android:radius="30dp"/>
