--- a/app/src/main/res/drawable/container_edit_text_all.xml
+++ b/app/src/main/res/drawable/container_edit_text_all.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#fff"/>
+    <solid android:color="#95AABCFF"/>
     <corners android:radius="30dp"/>
-    <stroke android:color="@color/black" android:width="1dp"/>
+    <stroke android:color="@color/black" android:width="2.5dp"/>
 
 </shape>
