--- a/app/src/main/res/layout/activity_aulas.xml
+++ b/app/src/main/res/layout/activity_aulas.xml
@@ -3,25 +3,39 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background">
+    android:background="@color/AZUL_PRIMARIA">
+
 
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/gardientroxo45">
+        android:background="#6385FB">
+
+        <ImageButton
+            android:id="@+id/voltarmenu1"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/homeblack"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:onClick="" />
 
         <TextView
             android:id="@+id/Toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="  Videos"
+            android:text=" Videos"
             android:drawableLeft="@drawable/play"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
             android:padding="10dp"
-            android:layout_marginLeft="60pt"
+            android:layout_marginLeft="40pt"
             android:layout_marginTop="10dp" />
+
+
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
