--- a/app/src/main/res/layout/activity_congratulations.xml
+++ b/app/src/main/res/layout/activity_congratulations.xml
@@ -3,17 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/background"
     android:layout_height="match_parent"
+    android:background="@color/AZUL_PRIMARIA"
     tools:context="Activity.Congratulations">
 
     <ImageButton
         android:id="@+id/voltar"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/homeblack"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/homeblack"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.048"
@@ -35,33 +35,47 @@
         app:layout_constraintVertical_bias="0.021"
         tools:ignore=",MissingConstraints" />
 
-    <Button
+    <View
+        android:id="@+id/containerlogin"
+        android:layout_width="313dp"
+        android:layout_height="176dp"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/container_edit_text_login"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.718" />
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button"
         style="@style/Button1"
         android:layout_width="210dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="51dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="28dp"
         android:text="Tentar Novamente"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintVertical_bias="0.075" />
+        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button2"
         style="@style/Button1"
         android:layout_width="210dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="400dp"
 
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="52dp"
         android:text="Próxima Fase"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.105" />
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin"
+        app:layout_constraintTop_toTopOf="@+id/containerlogin"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
