--- a/app/src/main/res/layout/activity_emergency.xml
+++ b/app/src/main/res/layout/activity_emergency.xml
@@ -1,67 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@android:color/white">
+    android:background="@color/AZUL_PRIMARIA">
+
+    <ImageButton
+        android:id="@+id/voltarmenu1"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/homeblack"
+        android:onClick=""
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <View
+        android:id="@+id/containerlogin"
+        android:layout_width="349dp"
+        android:layout_height="652dp"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/container_edit_text_login"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.718" />
 
     <!-- Título da tela -->
+
+    <!-- Descrição da funcionalidade -->
     <TextView
         android:id="@+id/tv_emergency_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:text="Emergência"
+        android:textColor="@android:color/black"
         android:textSize="32sp"
         android:textStyle="bold"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="40dp" />
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin"
+        app:layout_constraintTop_toTopOf="@+id/containerlogin" />
 
-    <!-- Descrição da funcionalidade -->
     <TextView
         android:id="@+id/tv_emergency_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Este botão enviará uma mensagem de emergência com sua localização para seus contatos de confiança."
-        android:textSize="18sp"
-        android:textColor="@android:color/black"
+        android:layout_width="294dp"
+        android:layout_height="75dp"
         android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_emergency_title"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5" />
+        android:text="Este botão enviará uma mensagem de emergência com sua localização para seus contatos de confiança."
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin"
+        app:layout_constraintTop_toBottomOf="@id/tv_emergency_title" />
 
     <!-- Botão de enviar SMS de emergência -->
-    <Button
-        android:id="@+id/btn_send_emergency"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enviar Emergência por SMS"
-        android:textSize="20sp"
-        android:padding="12dp"
-        android:layout_marginTop="40dp"
-        android:backgroundTint="@android:color/holo_red_dark"
-        android:textColor="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@id/tv_emergency_description"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Botão de enviar e-mail de emergência -->
-    <Button
-        android:id="@+id/btn_send_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Enviar Emergência por E-mail"
-        android:textSize="20sp"
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_send_emergency"
+        style="@style/Button2"
+        android:layout_width="305dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="96dp"
+        android:backgroundTint="@android:color/holo_red_dark"
         android:padding="12dp"
+        android:text="Enviar Emergência por SMS"
+        android:textColor="@android:color/white"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin"
+        app:layout_constraintTop_toBottomOf="@id/tv_emergency_description" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_send_email"
+        style="@style/Button3"
+        android:layout_width="305dp"
+        android:layout_height="47dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="@android:color/holo_blue_dark"
+        android:padding="12dp"
+        android:text="Enviar Emergência por E-mail"
         android:textColor="@android:color/white"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin"
         app:layout_constraintTop_toBottomOf="@id/btn_send_emergency"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintVertical_bias="0.043" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
