--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -1,55 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background">
+    android:background="@color/AZUL_PRIMARIA">
 
     <androidx.appcompat.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/gardientroxo45">
+        android:id="@+id/toolbar"
+        android:layout_width="408dp"
+        android:layout_height="64dp"
+        android:background="#6385FB"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <ImageButton
             android:id="@+id/buttonDrawerToggle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/drawer_menu"
             android:background="@android:color/transparent"
-            android:padding="5dp"/>
+            android:padding="5dp"
+            android:src="@drawable/drawer_menu" />
     </androidx.appcompat.widget.Toolbar>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:src="@drawable/jogomenu"
+    <View
+        android:id="@+id/containerlogin"
+        android:layout_width="313dp"
+        android:layout_height="270dp"
         android:layout_gravity="center"
-        />
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/container_edit_text_login"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.798" />
+
+    <ImageView
+        android:id="@+id/imageViewMenu"
+        android:layout_width="417dp"
+        android:layout_height="212dp"
+        android:src="@drawable/jogomenu"
+        app:layout_constraintBottom_toTopOf="@+id/containerlogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.649" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/joguinho"
         style="@style/Button1"
         android:layout_width="210dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="80dp"
-        android:text="Jogo da memoria!"/>
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="51dp"
+        android:text="Jogo da memoria!"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/joguinho3"
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin"
+        app:layout_constraintTop_toTopOf="@+id/containerlogin" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/joguinho2"
         style="@style/Button1"
         android:layout_width="214dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp"
-        android:text="encontre os animais!"/>
+        android:layout_marginStart="49dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="37dp"
+        android:text="Encontre os animais!"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/joguinho3"
         style="@style/Button1"
         android:layout_width="214dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp"
-        android:text="Questionario"/>
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="32dp"
+        android:text="Questionário"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/joguinho2"
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin" />
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
