--- a/app/src/main/res/layout/cadastro_main.xml
+++ b/app/src/main/res/layout/cadastro_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@color/AZUL_PRIMARIA"
 
     tools:context=".Activity.cadastro_activity">
 
@@ -158,6 +158,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="12dp"
         android:onClick="validarcampos"
+        android:textColor="@color/black"
         android:text="Cadastrar!"
         app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
         app:layout_constraintEnd_toEndOf="@+id/containerlogin"
