--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:gravity="bottom"
     android:padding="20dp"
-    android:background="@drawable/background"
+    android:background="@color/AZUL_PRIMARIA"
     android:layout_height="180dp">
 
     <androidx.cardview.widget.CardView
