--- a/app/src/main/res/layout/game_menu.xml
+++ b/app/src/main/res/layout/game_menu.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@color/AZUL_PRIMARIA"
     tools:context="Activity.MainActivity">
 
     <ImageButton
         android:id="@+id/voltarmenu1"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:background="@drawable/homeblack"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/homeblack"
         app:layout_constraintBottom_toTopOf="@+id/fase3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.048"
@@ -22,10 +22,10 @@
         app:layout_constraintVertical_bias="0.061" />
 
     <ImageView
-        android:layout_width="350dp"
-        android:layout_height="287dp"
-        android:src="@drawable/jogodamemoria"
+        android:layout_width="447dp"
+        android:layout_height="349dp"
         android:layout_marginTop="50dp"
+        android:src="@drawable/jogodamemoria"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,50 +33,59 @@
         app:layout_constraintVertical_bias="0.0" />
 
 
+    <View
+        android:id="@+id/containerlogin"
+        android:layout_width="313dp"
+        android:layout_height="270dp"
+        android:layout_gravity="center"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/container_edit_text_login"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.757" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/fase1"
         style="@style/Button1"
         android:layout_width="210dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginBottom="32dp"
         android:onClick="passar_fase1"
         android:text="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.781" />
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/fase2"
         style="@style/Button1"
         android:layout_width="210dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginBottom="32dp"
         android:onClick="passar_fase2"
         android:text="2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.639" />
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/fase1"
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/fase3"
         style="@style/Button1"
         android:layout_width="210dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="90dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="51dp"
         android:onClick="passar_fase3"
         android:text="3"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.485" />
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/fase2"
+        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
+        app:layout_constraintStart_toStartOf="@+id/containerlogin"
+        app:layout_constraintTop_toTopOf="@+id/containerlogin" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
