--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@color/AZUL_PRIMARIA"
 
     tools:context=".Activity.login_activity">
 
@@ -147,6 +147,8 @@
         android:onClick="validarcampos"
         android:padding="10dp"
         android:text="Entrar!"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
         app:layout_constraintEnd_toEndOf="@+id/containerlogin"
         app:layout_constraintHorizontal_bias="0.0"
