--- a/app/src/main/res/layout/game_menu.xml
+++ b/app/src/main/res/layout/game_menu.xml
@@ -7,6 +7,7 @@
     android:background="@color/AZUL_PRIMARIA"
     tools:context="Activity.MainActivity">
 
+    <!-- Botão Voltar -->
     <ImageButton
         android:id="@+id/voltarmenu1"
         android:layout_width="40dp"
@@ -14,78 +15,140 @@
         android:layout_marginLeft="20dp"
         android:layout_marginTop="20dp"
         android:background="@drawable/homeblack"
-        app:layout_constraintBottom_toTopOf="@+id/fase3"
+        app:layout_constraintBottom_toTopOf="@+id/container_questionario"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.048"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.061" />
 
+    <!-- Imagem do Jogo da Memória -->
     <ImageView
-        android:layout_width="447dp"
-        android:layout_height="349dp"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/jogodamemoria"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/imageViewJogoMemora"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:src="@drawable/jogomenu"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp" />
 
-
-    <View
-        android:id="@+id/containerlogin"
-        android:layout_width="313dp"
-        android:layout_height="270dp"
-        android:layout_gravity="center"
+    <!-- Container dos Cards -->
+    <LinearLayout
+        android:id="@+id/container_questionario"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginHorizontal="20dp"
+        android:orientation="vertical"
         android:background="@drawable/container_edit_text_login"
+        android:padding="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewJogoMemora"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.757" />
+        app:layout_constraintStart_toStartOf="parent">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/fase1"
-        style="@style/Button1"
-        android:layout_width="210dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:onClick="passar_fase1"
-        android:text="1"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/containerlogin"
-        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
-        app:layout_constraintStart_toStartOf="@+id/containerlogin" />
+        <!-- Card do Questionário -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_questionario"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginBottom="16dp"
+            android:backgroundTint="@color/AMARELO_SECUNDARIA"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="6dp">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/fase2"
-        style="@style/Button1"
-        android:layout_width="210dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:onClick="passar_fase2"
-        android:text="2"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/fase1"
-        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
-        app:layout_constraintStart_toStartOf="@+id/containerlogin" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/fase3"
-        style="@style/Button1"
-        android:layout_width="210dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginEnd="51dp"
-        android:onClick="passar_fase3"
-        android:text="3"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/fase2"
-        app:layout_constraintEnd_toEndOf="@+id/containerlogin"
-        app:layout_constraintStart_toStartOf="@+id/containerlogin"
-        app:layout_constraintTop_toTopOf="@+id/containerlogin" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="sans-serif-medium"
+                    android:padding="16dp"
+                    android:text="Questionário"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
 
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_margin="8dp"
+                    android:src="@drawable/quiz" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <!-- Card do Jogo da Memória -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_memoria"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginBottom="16dp"
+            android:backgroundTint="@android:color/holo_orange_light"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="6dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="sans-serif-medium"
+                    android:padding="16dp"
+                    android:text="Jogo da Memória"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_margin="8dp"
+                    android:src="@drawable/memory" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <!-- Card Encontre os Animais -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_animais"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_marginBottom="0dp"
+            android:backgroundTint="#E58F33"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="6dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="sans-serif-medium"
+                    android:padding="16dp"
+                    android:text="Encontre os Animais"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_margin="8dp"
+                    android:src="@drawable/encontreosanimais" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
